samples/_failures_safe/1761801857_68ab77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b0833c1.c: In function ‘main’:
./samples/SAFE/__tmp_7b0833c1.c:161:9: error: expected expression at end of input
  161 |         if (input_char ==
      |         ^~
./samples/SAFE/__tmp_7b0833c1.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7b0833c1.c:161:9: error: expected declaration or statement at end of input
